--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js",
+    "server":"nodemon index.js",
+    "client":"npm run start --prefix frontend/regional-mma",
+    "dev":"concurrently \" npm run server\" \"npm run client\""
+
   },
   "author": "",
   "license": "ISC",
