--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "server": "nodemon index.js",
-    "client": "npm run start --prefix frontend/regional-mma2",
+    "client": "npm run start --prefix frontend/regional-mma",
     "dev": "concurrently \" npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^4.1.0",
     "express": "^4.17.1",
     "lodash": "^4.17.11",
     "nodemon": "^1.19.1",
