--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix frontend/regional-mma2",
     "dev": "concurrently \" npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend/regional-mma2 && npm run build --prefix frontend/regional-mma2"
   },
   "author": "",
   "license": "ISC",
