--- a/frontend/regional-mma2/package.json
+++ b/frontend/regional-mma2/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.8.6",
     "react-loader-spinner": "^2.3.0",
     "react-scripts": "3.0.1",
-    "react-simple-maps": "^0.12.1"
+    "react-simple-maps": "^0.12.1",
+    "typescript": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
