--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
     "lodash": "^4.17.11",
+    "mongoose": "^5.6.0",
     "nodemon": "^1.19.1",
     "puppeteer": "^1.14.0"
   }
