--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.6.0",
     "nodemon": "^1.19.1",
-    "puppeteer": "^1.14.0"
+    "puppeteer": "^1.14.0",
+    "react-spring": "^8.0.25"
   }
 }
